# OrbbecSDK

./: CMakeLists.txt
cmake/: InstallTargets.cmake  OrbbecSDKConfig.cmake.in
